--- a/templates/card.mustache
+++ b/templates/card.mustache
@@ -77,6 +77,11 @@ Example context (json):
          #{{{displayoptions.sectionname}}}
     </div>
     {{/displayoptions.sectionname}}
+    {{#displayoptions.subsection}}
+    <div class="cursor-pointer small text-primary subsection-tag">
+        {{{displayoptions.subsection}}}
+    </div>
+    {{/displayoptions.subsection}}
 
     <div class="top-section small">
         <div class="w-100 d-flex align-items-start">
