--- a/templates/editor/addcontenttype.mustache
+++ b/templates/editor/addcontenttype.mustache
@@ -29,7 +29,7 @@
             <div class="modal-header align-items-center flex-column">
             <div class="w-100 d-flex align-items-center justify-content-between">
                 <h5 class="modal-title">{{#str}}selectacontenttypetoadd, mod_interactivevideo{{/str}}</h5>
-                <button type="button" class="btn p-0 border-0 close" data{{bs}}-dismiss="modal" aria-label="Close">
+                <button type="button" class="btn p-0 border-0" data{{bs}}-dismiss="modal" aria-label="Close">
                    <i class="bi bi-x-lg fa-fw fs-25px"></i>
                 </button>
                 </div>
