--- a/templates/editor/editor.mustache
+++ b/templates/editor/editor.mustache
@@ -53,7 +53,8 @@ Example context (json):
         <i class="position-absolute bi bi-grip-vertical"></i>
     </div>
     <div class="p-3 position-relative" id="content-region">
-        <div class="w-100 h-100 overflow-auto border iv-rounded-lg position-relative" id="contentblock">
+        <div class="w-100 h-100 overflow-auto border iv-rounded-lg position-relative"
+             id="contentblock">
             {{! action bar }}
             {{> mod_interactivevideo/editor/videoactions}}
             {{! content item list }}
