--- a/styles.css
+++ b/styles.css
@@ -1636,7 +1636,7 @@ html:has(.path-mod-interactivevideo) {
     padding-inline-start: 0.3em;
     margin-top: 0.3em;
     position: relative;
-    transition: all ease-in-out 300ms;
+    transition: top ease-in-out 300ms;
     opacity: 1;
     top: 0;
 }
