--- a/templates/player/messagetitle.mustache
+++ b/templates/player/messagetitle.mustache
@@ -27,7 +27,7 @@
 <h5 class="modal-title text-truncate mb-0 d-flex align-items-center"
     id="modal-title-{{id}}" role="heading" aria-level="5">
     <i class="{{icon}} iv-mr-2 d-none d-md-inline fs-25px" aria-hidden="true"></i>
-    <span>{{{title}}}</span>
+    <span class="text-truncate">{{{title}}}</span>
 </h5>
 
 <div class="btns d-flex align-items-center">
