--- a/templates/player/controls.mustache
+++ b/templates/player/controls.mustache
@@ -29,7 +29,7 @@
     <div id="taskinfo" dir="ltr"
          class="border-0 flex-column align-items-center justify-content-end px-3 bg-transparent">
         <div class="align-items-start position-relative w-100 {{#displayoptions.hideinteractions}}d-none{{/displayoptions.hideinteractions}}"
-             id="interactions-nav" aria-label="{{#str}}interactions, mod_interactivevideo{{/str}}">
+             id="interactions-nav">
             <ul></ul>
         </div>
 
